# poker

XPokerEval/: ABOUT.TXT  XPokerEval.sln  (+1 more)
XPokerEval/XPokerEval.Pokersource/: ABOUT.TXT  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  WHATS-HERE  WHATS-HERE.Java  aclocal.m4  configure  configure.ac  make_master.sh  mktab_astud.vcproj  mktab_basic.vcproj  mktab_evx.vcproj  mktab_joker.vcproj  mktab_lowball.vcproj  mktab_packed.vcproj  packaging-farm.bat  poker-eval.nsi  poker-eval.pc.in  poker-eval.sln  poker-eval.spec.in  poker-eval.vcproj
XPokerEval/XPokerEval.Pokersource/config/: ccache.m4
XPokerEval/XPokerEval.Pokersource/csharp/: API.cs  Enum.cs  EnumResult.cs  GameParams.cs  Makefile  StdDeck.cs  Test.cs
XPokerEval/XPokerEval.Pokersource/examples/: Makefile.am  Makefile.dos  Makefile.in  eval.c  eval.vcproj  fish.c  fish.vcproj  five_card_hands.c  five_card_hands.vcproj  getopt_w32.c  getopt_w32.h  hcmp2.c  hcmp2.vcproj  hcmpn.c  hcmpn2.vcproj  pokenum.c  pokenum.vcproj  seven_card_hands.c  seven_card_hands.vcproj  usedecks.c  usedecks.vcproj  utest1
XPokerEval/XPokerEval.Pokersource/fink/: libpoker-eval.info
XPokerEval/XPokerEval.Pokersource/gentoo/dev-games/poker-eval/: poker-eval-133.0-r1.ebuild
XPokerEval/XPokerEval.Pokersource/include/: Makefile.am  Makefile.dos  Makefile.in  combinations.h  config.h.in  deck.h  deck_astud.h  deck_joker.h  deck_std.h  deck_undef.h  enumdefs.h  enumerate.h  enumord.h  evx_defs.h  game_astud.h  game_joker.h  game_std.h  handval.h  handval_low.h  poker_config.h  poker_config.h.in  poker_defs.h  poker_wrapper.h  pokereval_export.h  rules_astud.h  rules_joker.h  rules_std.h  rules_undef.h
XPokerEval/XPokerEval.Pokersource/include/inlines/: eval.h  eval_astud.h  eval_joker.h  eval_joker_low.h  eval_joker_low8.h  eval_low.h  eval_low27.h  eval_low8.h  eval_omaha.h  eval_type.h  evx5.h  evx7.h  evx_action.h  evx_inlines.h
XPokerEval/XPokerEval.Pokersource/java/: Makefile.dos  Makefile.in  jniutil.c  jniutil.h  overview.html  pokutil.c  pokutil.h
XPokerEval/XPokerEval.Pokersource/java/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  packages.html
XPokerEval/XPokerEval.Pokersource/java/javadoc/org/pokersource/: AllTests.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
XPokerEval/XPokerEval.Pokersource/java/javadoc/org/pokersource/class-use/: AllTests.html
XPokerEval/XPokerEval.Pokersource/java/javadoc/org/pokersource/enum/: BeliefVector.html  Enumerate.html  HandGroup.html  HandMatchup.html  HoldemAbdulGroup.html  HoldemAtomicGroup.html  HoldemBeliefVector.html  HoldemCanonGroup.html  HoldemHandGroup.html  HoldemHandGroupFactory.html  HoldemSMGroup.html  HoldemUniversalGroup.html  MatchupOutcome.html  NestedLoopEnumeration.html  NestedLoopSampling.html  SAIE.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
XPokerEval/XPokerEval.Pokersource/java/javadoc/org/pokersource/enum/class-use/: BeliefVector.html  Enumerate.html  HandGroup.html  HandMatchup.html  HoldemAbdulGroup.html  HoldemAtomicGroup.html  HoldemBeliefVector.html  HoldemCanonGroup.html  HoldemHandGroup.html  HoldemHandGroupFactory.html  HoldemSMGroup.html  HoldemUniversalGroup.html  MatchupOutcome.html  NestedLoopEnumeration.html  NestedLoopSampling.html  SAIE.html
XPokerEval/XPokerEval.Pokersource/java/javadoc/org/pokersource/eval/: AsianStudEval.html  JokerEval.html  StandardEval.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
XPokerEval/XPokerEval.Pokersource/java/javadoc/org/pokersource/game/: Deck.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
XPokerEval/XPokerEval.Pokersource/java/org/pokersource/: AllTests.java
XPokerEval/XPokerEval.Pokersource/java/org/pokersource/enum/: BeliefVector.java  Enumerate.java  EnumerateImp.c  HandGroup.java  HandMatchup.java  HoldemAbdulGroup.java  HoldemAtomicGroup.java  HoldemBeliefVector.java  HoldemCanonGroup.java  HoldemHandGroup.java  HoldemHandGroupFactory.java  HoldemSMGroup.java  HoldemUniversalGroup.java  MatchupOutcome.java  NestedLoopEnumeration.java  NestedLoopSampling.java  SAIE.java  package.html
XPokerEval/XPokerEval.Pokersource/java/org/pokersource/enum/test/: AllTests.java  EnumerateTest.java  HandMatchupTest.java  HoldemAbdulGroupTest.java  HoldemAtomicGroupTest.java  HoldemBeliefVectorTest.java  HoldemCanonGroupTest.java  HoldemHandGroupFactoryTest.java  HoldemSMGroupTest.java  HoldemUniversalGroupTest.java  NestedLoopEnumerationTest.java  SAIETest.java
XPokerEval/XPokerEval.Pokersource/java/org/pokersource/eval/: AsianStudEval.java  AsianStudEvalImp.c  JokerEval.java  JokerEvalImp.c  StandardEval.java  StandardEvalImp.c  package.html
XPokerEval/XPokerEval.Pokersource/java/org/pokersource/eval/test/: AllTests.java  AsianStudEvalTest.java  JokerEvalTest.java  StandardEvalTest.java
XPokerEval/XPokerEval.Pokersource/java/org/pokersource/game/: Deck.java  package.html
XPokerEval/XPokerEval.Pokersource/java/org/pokersource/game/test/: AllTests.java  DeckTest.java
XPokerEval/XPokerEval.Pokersource/lib/: Makefile.am  Makefile.dos  Makefile.in  combinations.c  deck.c  deck_astud.c  deck_joker.c  deck_std.c  enumerate.c  enumord.c  evx.c  evx_generate.c  evx_preamble.cfrag  lowball.c  mktab_astud.c  mktab_basic.c  mktab_evx.c  mktab_joker.c  mktab_lowball.c  mktab_packed.c  mktable.c  mktable.h  mktable_utils.c  poker_wrapper.c  rules_astud.c  rules_joker.c  rules_std.c  t_astudcardmasks.c  t_botcard.c  t_botfivecards.c  t_botfivecardsj.c  t_cardmasks.c  t_evx_flushcards.c  t_evx_pairval.c  t_evx_strval.c  t_evx_tripsval.c  t_jokercardmasks.c  t_jokerstraight.c  t_maskrank.c  t_nbits.c  (+7 more)
XPokerEval/XPokerEval.Pokersource/tests/: Makefile.am  Makefile.dos  Makefile.in  enumtest1.c  enumtest2.c  enumtest3.c  enumtest5.c  enumtest7.c  joktest1.c  poker_wrapper.c  run.in
(+177 files in other folders)
